--- a/lesson03/exercise01/finished/styles.css
+++ b/lesson03/exercise01/finished/styles.css
@@ -7,13 +7,13 @@ body
 }
 
 h1 { margin: 0; }
-h2, h3, h4, h5, h6 { color: green; }
+h2,h3,h4,h5,h6 { color: green; }
 
 /* class selectors */
 
 /* ID selectors */
 
-/* Universal selectors */
+/* universal selectors */
 
 /* descendant selectors */
 
