--- a/lesson02/exercise01/finished/styles.css
+++ b/lesson02/exercise01/finished/styles.css
@@ -1,8 +1,17 @@
-h1 { color: red; }
-h2 { color: blue; }
-h3 { color: green; }
-h4 { color: purple; }
-ul { color: pink; }
-ol { color: yellow; }
-li { color: navy; }
-blockquote { color: lime; }
+h1 { font-size: 3em; } 
+
+h2 { font-family: Helvetica, Arial, sans-serif; } 
+
+h3 { color: red; }
+
+h4 { background-color: #ffff00; } 
+
+p { line-height: 1.5em; } 
+
+ul { border: 1px solid red; }
+
+ol { font-style: italic; } 
+
+li { font-weight: bold; }
+
+blockquote { width: 20em; }
