--- a/lesson03/exercise03/finished/styles.css
+++ b/lesson03/exercise03/finished/styles.css
@@ -7,13 +7,14 @@ body
 }
 
 h1 { margin: 0; }
-h2, h3, h4, h5, h6 { color: green; }
+h2,h3,h4,h5,h6 { color: green; }
 
 /* class selectors */
 .container
 {
 	width: 50em;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .nav
@@ -29,7 +30,7 @@ h2, h3, h4, h5, h6 { color: green; }
 }
 
 /* ID selectors */
-#header, #footer
+#header,#footer
 {
 	padding: 2em;
 	color: #fff;
