--- a/lesson07/exercise01/start/styles.css
+++ b/lesson07/exercise01/start/styles.css
@@ -21,4 +21,12 @@ h2
 	border: 1px solid blue;
 }
 
-/* add rules here */
+/* add the property */
+
+/* positioned against? */
+
+/* understanding values */
+
+/* stretched */
+
+/* sized */
