--- a/lesson07/exercise03/finished/styles.css
+++ b/lesson07/exercise03/finished/styles.css
@@ -11,7 +11,7 @@ h2
 {
 	margin: 0;
 	border: 1px solid red;
-	background: rgba(255,255,0,.5);
+	background: yellow;
 }
 
 .container
@@ -21,33 +21,29 @@ h2
 	border: 1px solid blue;
 }
 
-/* add rules here */
+/* add the property */
 h2 { position: fixed; }
 
-/*
-1. h2 out of flow
-2. h2 stays in the same position - does not move to the left or right
-3. h2 shrink-wraps
-4. content reflows under the h2
-5. h2 will remain fixed when page is scrolled
-*/
-
+/* understanding values */
 h2 { left: 20px; }
 h2 { top: 20px; }
-h2 { left: -20px; }
-h2 { top: -20px; }
 
-h2
-{
-	left: 0;
-	top: 0;
-}
-
+/* stretched */
 h2
 {
 	left: 0;
 	right: 0;
 }
 
+/* sized */
 h2 { width: 300px; }
-h2 { height: 300px; }
+
+
+
+
+
+
+
+
+
+
