--- a/lesson07/exercise03/start/styles.css
+++ b/lesson07/exercise03/start/styles.css
@@ -11,7 +11,7 @@ h2
 {
 	margin: 0;
 	border: 1px solid red;
-	background: rgba(255,255,0,.5);
+	background: yellow;
 }
 
 .container
@@ -21,4 +21,20 @@ h2
 	border: 1px solid blue;
 }
 
-/* add rules here */
+/* add the property */
+
+/* understanding values */
+
+/* stretched */
+
+/* sized */
+
+
+
+
+
+
+
+
+
+
