--- a/lesson08/exercise01/finished/styles.css
+++ b/lesson08/exercise01/finished/styles.css
@@ -16,5 +16,16 @@ h1 { margin: 0 0 .5em; }
 }
 
 /* add rules here */
-.example01 { float: left; }
-.example02 { float: right; }
+.example01
+{
+	float: left; 
+	margin-right: 20px;
+}
+
+p { border: 5px solid red; }
+
+.example02 
+{
+	float: right; 
+	margin-left: 20px; 
+}
