--- a/lesson07/exercise01/finished/styles.css
+++ b/lesson07/exercise01/finished/styles.css
@@ -21,21 +21,10 @@ h2
 	border: 1px solid blue;
 }
 
-/* add rules here */
+/* add the property */
 h2 { position: absolute; }
 
-/*
-1. h2 out of flow
-2. h2 stays in the same position - does not move to the left or right
-3. h2 shrink-wraps
-4. content reflows under the h2
-*/
-
-h2 { left: 20px; }
-h2 { top: 20px; }
-h2 { left: -20px; }
-h2 { top: -20px; }
-
+/* positioned against? */
 h2
 {
 	left: 0;
@@ -44,11 +33,18 @@ h2
 
 .container { position: relative; }
 
+/* understanding values */
+h2 { left: 20px; }
+h2 { left: -20px; }
+h2 { top: 20px; }
+h2 { top: -20px; }
+
+/* stretched */
 h2
 {
 	left: 0;
 	right: 0;
 }
 
+/* sized */
 h2 { width: 300px; }
-h2 { height: 300px; }
