--- a/lesson08/exercise02/start/styles.css
+++ b/lesson08/exercise02/start/styles.css
@@ -7,7 +7,11 @@ body
 
 h1 { margin: 0 0 .5em; }
 
-h2 { border: 1px solid red; }
+h2
+{
+	border: 1px solid red;
+	background: yellow;
+}
 
 .container
 {
