--- a/lesson09/exercise06/finished/styles.css
+++ b/lesson09/exercise06/finished/styles.css
@@ -17,5 +17,13 @@ h1 { margin: 0 0 .5em; }
 /* add rules here */
 .example01
 {
+	background-image: url(a.jpg);
+	background-repeat: repeat-x;
+	background-position: 0 50%;
+	background-color: yellow;
+}
+
+.example01
+{
 	background: url(a.jpg) repeat-x 0 50% yellow;
 }
